--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -17,6 +17,7 @@ jobs:
         uses: docker/build-push-action@v2.3.0
         with:
           push: true
-          tags: docker.pkg.github.com/${{ github.repository }}/debian:stretch-latest
+          tags: tenhishadow/test:v1
+          #tags: docker.pkg.github.com/${{ github.repository }}/debian:stretch-latest
 
 ...
