--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -17,7 +17,8 @@ jobs:
         uses: docker/build-push-action@v2.3.0
         with:
           push: true
-          tags: ${{ github.repository }}:test
+          #tags: ${{ github.repository }}:test
+          tags: docker.pkg.github.com/${{ github.repository }}/aaa:latest
           #tags: docker.pkg.github.com/${{ github.repository }}/debian:stretch-latest
 
 ...
