--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -12,13 +12,20 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
+        
+        name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.CR_PAT }}    
 
       - name: Push to GitHub Packages
         uses: docker/build-push-action@v2.3.0
         with:
           push: true
           #tags: ${{ github.repository }}:test
-          tags: docker.pkg.github.com/${{ github.repository }}/aaa:latest
+          tags: ghcr.io/aaa:latest
           #tags: docker.pkg.github.com/${{ github.repository }}/debian:stretch-latest
 
 ...
