--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -19,7 +19,12 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.CR_PAT }}    
-
+      - name: Push to GitHub Packages
+        uses: docker/build-push-action@v2.3.0
+        with:
+          push: true
+          #tags: ${{ github.repository }}:test
+          tags: ghcr.io/aaa:latest
 
           #tags: docker.pkg.github.com/${{ github.repository }}/debian:stretch-latest
 
