--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -23,8 +23,8 @@ jobs:
         uses: docker/build-push-action@v2.3.0
         with:
           push: true
-          #tags: ${{ github.repository }}:test
-          tags: ghcr.io/aaa:latest
+          tags: ${{ github.repository }}/test:v1
+          #tags: ghcr.io/aaa:latest
 
           #tags: docker.pkg.github.com/${{ github.repository }}/debian:stretch-latest
 
